@@ -11,6 +11,7 @@ exportMethods(predict)
 exportMethods(print)
 exportMethods(scalability)
 exportMethods(show)
+exportMethods(sigma)
 exportMethods(summary)
 import(graphics)
 import(methods)
