@@ -1,0 +1,31 @@
+
+R version 3.6.2 (2019-12-12) -- "Dark and Stormy Night"
+Copyright (C) 2019 The R Foundation for Statistical Computing
+Platform: x86_64-apple-darwin15.6.0 (64-bit)
+
+R is free software and comes with ABSOLUTELY NO WARRANTY.
+You are welcome to redistribute it under certain conditions.
+Type 'license()' or 'licence()' for distribution details.
+
+R is a collaborative project with many contributors.
+Type 'contributors()' for more information and
+'citation()' on how to cite R or R packages in publications.
+
+Type 'demo()' for some demos, 'help()' for on-line help, or
+'help.start()' for an HTML browser interface to help.
+Type 'q()' to quit R.
+
+> # sigma.R --- Test function sigma
+> 
+> library(usl)
+> 
+> data(specsdm91)
+> 
+> u <- usl(throughput ~ load, specsdm91)
+> 
+> signif(sigma(u), digits=3)
+[1] 82.8
+> 
+> proc.time()
+   user  system elapsed 
+  0.453   0.110   0.549 
